<resources>
    <string name="app_name">ContactBook</string>
    <string name="my_contacts">My Contacts</string>
    <string name="search_text_hint">Search by name or number</string>
    <string name="contact_text">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="change_photo">Change photo</string>
    <string name="add_first_name">Add first name</string>
    <string name="add_second_name">Add second name</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="add_email">Add email</string>
    <string name="delete_dialog_msg">Are you sure want delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="toast_error_msg">"Something gone wrong.. "</string>
</resources>