<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/avatar_img"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="85dp"
        android:src="@drawable/ic_baseline_person_24"
        tools:src="@drawable/img" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="0dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:orientation="horizontal"/>

    <ImageButton
        android:id="@+id/arrow_back"
        app:layout_constraintStart_toStartOf="@id/top_layout"
        app:layout_constraintTop_toTopOf="@id/top_layout"
        app:layout_constraintBottom_toBottomOf="@id/top_layout"
        android:src="@drawable/black_arrow"
        android:background="?selectableItemBackground"
        android:layout_marginTop="4dp"
        android:layout_width="24dp"
        android:layout_height="24dp"/>

    <TextView
        android:id="@+id/contact_text"
        android:text="@string/contact_text"
        app:layout_constraintStart_toStartOf="@id/top_layout"
        app:layout_constraintTop_toTopOf="@id/top_layout"
        app:layout_constraintBottom_toBottomOf="@id/top_layout"
        app:layout_constraintEnd_toEndOf="@id/top_layout"
        android:textSize="23sp"
        android:textStyle="bold"
        android:fontFamily="@font/arvo"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:elevation="10dp"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/change_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/delete_icon"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/top_layout"
        app:layout_constraintBottom_toBottomOf="@id/top_layout"
        android:src="@drawable/ic_baseline_create_24"
        android:background="?selectableItemBackground"
        android:layout_gravity="center"/>

    <ImageButton
        android:id="@+id/delete_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/top_layout"
        app:layout_constraintTop_toTopOf="@id/top_layout"
        app:layout_constraintBottom_toBottomOf="@id/top_layout"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_delete_24"
        android:background="?selectableItemBackground"/>

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:fontFamily="@font/arvo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/avatar_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="Denis Sunyaikin"/>

    <LinearLayout
        android:id="@+id/phone_layout"
        app:layout_constraintTop_toBottomOf="@id/name_txt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/mobile_txt"
        android:text="@string/mobile"
        app:layout_constraintStart_toStartOf="@id/phone_layout"
        app:layout_constraintTop_toTopOf="@id/phone_layout"
        android:layout_marginStart="28dp"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:fontFamily="@font/arvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/phone_txt"
        android:text="+7(987)085-85-87"
        app:layout_constraintStart_toStartOf="@id/phone_layout"
        app:layout_constraintTop_toBottomOf="@id/mobile_txt"
        android:layout_marginStart="28dp"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:fontFamily="@font/arvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/email_layout"
        app:layout_constraintTop_toBottomOf="@id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/email_header_txt"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/email_layout"
        app:layout_constraintTop_toTopOf="@id/email_layout"
        android:layout_marginStart="28dp"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:fontFamily="@font/arvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/email_txt"
        android:text="dsunyaikin@gmail.com"
        app:layout_constraintStart_toStartOf="@id/email_layout"
        app:layout_constraintTop_toBottomOf="@id/email_header_txt"
        android:layout_marginStart="28dp"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:fontFamily="@font/arvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>